test_programs/compile_failure/noirc_frontend_tests_errors_on_if_without_else_type_mismatch/src/main.nr

    fn main() {
        if true {
            1
        }
    }
    